[project]
name = "eazy-iagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-redis>=0.2.5",
    "langgraph>=1.1.4",
    "redis>=7.4.0",
]
