[project]
name = "eazy-iagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.25",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.12",
    "langchain-redis>=0.2.5",
    "langgraph>=1.1.4",
    "modelscope>=1.35.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]
